fixes for 1.4 compliance.